<resources>
    <string name="app_name">Whatsapp</string>
    <string name="nao_tem_conta">Não tem conta? Cadastre-se</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="digite_email">Digite seu e-mail</string>
    <string name="btn_logar">Logar</string>
    <string name="imagem_logo">Imagem da Logo</string>
    <string name="digite_nome">Digite seu nome</string>
    <string name="bton_cadastrar">Cadastrar</string>
    <string name="imagem_usuario">Imagem Usuário</string>
    <string name="txt_nao_tem_conta">Não tem conta? Cadastre-se</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="configuracoes">Configurações</string>
    <string name="sair">Sair</string>
    <string name="contatos">Contatos</string>
    <string name="conversas">Conversas</string>
    <string name="nome_usuario">Nome do Usuário</string>
    <string name="mensagem_usuario">Esse não é o nome de usuário nem sua senha. Esse nome ficará visível para seus contatos do WhatsApp</string>
    <string name="sim">SIM</string>
    <string name="imagem_camera">Imagem Camera</string>
    <string name="imagem_galeria">Imagem Galeria</string>
    <string name="nome">Nome</string>
    <string name="email">email</string>
    <string name="imagem_enviar">Imagem Enviar</string>
    <string name="digite_mensagem">Digite uma mensagem</string>
    <string name="imagem_divisor">imagem divisor</string>
    <string name="jardier">Jardier</string>

</resources>
