<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza_claro"
    tools:context=".activity.ConfiguracoesActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civFotoPerfil"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/padrao"
        app:civ_border_color="#FFFFFFFF"
        app:civ_border_width="5dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:paddingRight="16dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/civFotoPerfil">

        <EditText
            android:id="@+id/etvPerfilNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/nome_usuario" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:background="@drawable/ic_editar_verd_24"
            android:labelFor="@+id/labelImagem" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center|center_horizontal"
        android:text="@string/mensagem_usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageButton
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imagem_camera"
        app:layout_constraintBottom_toBottomOf="@+id/civFotoPerfil"
        app:layout_constraintEnd_toStartOf="@+id/btnGaleria"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/civFotoPerfil"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@drawable/ic_camera_cinza_24" />

    <ImageButton
        android:id="@+id/btnGaleria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imagem_galeria"
        app:layout_constraintBottom_toBottomOf="@+id/civFotoPerfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCamera"
        app:layout_constraintTop_toTopOf="@+id/civFotoPerfil"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@drawable/ic_foto_cinza_24" />


</androidx.constraintlayout.widget.ConstraintLayout>
